if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
  set(CMAKE_CXX_FLAGS_DEBUG "/MT /O2")
  set(CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Od")
else()
  set(CMAKE_CXX_FLAGS_DEBUG "-g -O3")
  set(CMAKE_CXX_FLAGS_RELEASE "-O3")
endif()

add_executable(benchmark benchmark.cpp)
add_executable(performance performance.cpp)

if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
  if (Boost_FOUND)
    target_link_libraries(benchmark PRIVATE /usr/local/boost/lib/libboost_json-vc143-mt-s-x64-1_78.lib /usr/local/boost/lib/libboost_container-vc143-mt-s-x64-1_78.lib)
    target_link_libraries(performance PRIVATE /usr/local/boost/lib/libboost_json-vc143-mt-s-x64-1_78.lib /usr/local/boost/lib/libboost_container-vc143-mt-s-x64-1_78.lib)
  endif()
endif()
